--- a/worktwo.html
+++ b/worktwo.html
@@ -4,16 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HW1</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>HW#1 Variables Data types</h1>
-    <h2>Click Please F12 home - HOME WORK1</h2>
-    <a href="./worktwo.html">HomeWork2</a>
     
-
-    <script src="app.js">
-    
+    <script src="./main.js">
     </script>
 </body>
 </html>
