--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>HW#1 Variables Data types</h1>
     <h2>Click Please F12 home - HOME WORK1</h2>
     <a href="./worktwo.html">HomeWork2</a>
-    <a href="./homework.html"></a>
+    <a href="./homework.html">Homework3</a>
     
 
     <script src="app.js">
